ckanext/who_afro/assets/css/who-afro.css
/* ... */
#username-input-field .form-control {
    border-radius: 3px;
}

.additional-info .table{
    margin-bottom: 0.5rem;
}
.resource.additional-info .api-link{
    margin: -1.5rem 1.5rem 1rem 1.5rem;
}
.api-link{
    margin-bottom: 1rem;
}

.logs{
    background-color: #e7e7e7;
    font-family: 'Courier New', monospace;
    border: solid 1px #b5b5b5;
    border-radius: 5px;
    font-size: 10px;
    padding: 0px;
    margin-bottom: 20px;
}

.logs p{
    padding: 10px 20px;
    margin: 0px;
    display: block;
}

.logs p:hover{
    background-color: #f3f3f3;
    border-radius: 5px;
}

.logs-reload i{
    margin-right: 5px;
    color: #008dc9;
}

.module.automation{
    border-top: 1px dotted #DDD;
}

.module .automation-function{
    border-top: 1px dotted #DDD;
    margin-top: 20px;
    padding: 10px 0px;
}

.promoted-home .promoted-left .description {
    color: var(--who-blue-ten-percent);
    font-size: 16px;
    font-weight: 400;
    text-align: justify;
}

p.learn-more a {
    font-size: 16px;
    color: var(--who-blue-ten-percent);
    text-decoration: underline;
    font-weight: 700;
}

.footer-search-section {
    padding-top: 64px;
}

.footer-search-section div h2 {
    font-size: 18px;
    color: white;
    line-height: 24px;
    font-weight: 700;
}

.footer-search-section  .lens-btn {
    background-color: var(--who-blue-ten-percent) !important;
    border: var(--who-blue-ten-percent) solid 1px;
    border-radius: 0 4px 4px 0;
    padding-left: 36px;
    padding-right: 36px;
}

.footer-search-section #field-giant-search:focus {
    border: 0;
}

.footer-search-section  .lens-btn .search-label{
    display: block;
}

.footer-search-section .search-label {
    font-size: 18px;
    line-height: 24px;
    font-weight: 700;
}

.footer-search-section {
    margin-bottom: 64px;
}

.footer-search-section .lens-btn {
    border-left-color: var(--who-blue-ten-percent);
    color: var(--primary-navy);
}

@media only screen and (max-width: 575px) {
    .footer-search-section {
        padding-top: 0;
    }
    .footer-search-section div:first-child {
        display: none;

    }
}

#dataset-search-form .input-group-btn:last-child > .btn {
    z-index: 0;
    border-radius: 0 4px 4px 0;
}

/* mobile design for containers */
@media only screen and (max-width: 767px) {
    .container {
        width: 100%;
        padding-right: var(--bs-gutter-x, 1.5rem);
        padding-left: var(--bs-gutter-x, 1.5rem);
        margin-right: auto;
        margin-left: auto;
    }
    .homepage-package-list .dataset-item {
        padding: 12px 0;
    }
}

